# models/cluster.go
@@ -132,10 +132,11 @@ type Cluster struct {
 	InstallStartedAt strfmt.DateTime `json:"install_started_at,omitempty" gorm:"type:timestamp with time zone;default:'2000-01-01 00:00:00z'"`
 
 	// Indicates the type of this object. Will be 'Cluster' if this is a complete object,
-	// 'AddHostsCluster' for cluster that add hosts to existing OCP cluster,
+	// 'AddHostsCluster' for cluster that add hosts to existing OCP cluster, 'PoolCluster' if this is
+	// the hosts pool
 	//
 	// Required: true
-	// Enum: [Cluster AddHostsCluster]
+	// Enum: [Cluster AddHostsCluster PoolCluster]
 	Kind *string `json:"kind"`
 
 	// The progress of log collection or empty if logs are not applicable
@@ -182,7 +183,7 @@ type Cluster struct {
 
 	// Status of the OpenShift cluster.
 	// Required: true
-	// Enum: [insufficient ready error preparing-for-installation pending-for-input installing finalizing installed adding-hosts cancelled installing-pending-user-action]
+	// Enum: [insufficient ready error preparing-for-installation pending-for-input installing finalizing installed adding-hosts pool-cluster cancelled installing-pending-user-action]
 	Status *string `json:"status"`
 
 	// Additional information pertaining to the status of the OpenShift cluster.
@@ -668,7 +669,7 @@ var clusterTypeKindPropEnum []interface{}
 
 func init() {
 	var res []string
-	if err := json.Unmarshal([]byte(`["Cluster","AddHostsCluster"]`), &res); err != nil {
+	if err := json.Unmarshal([]byte(`["Cluster","AddHostsCluster","PoolCluster"]`), &res); err != nil {
 		panic(err)
 	}
 	for _, v := range res {
@@ -683,6 +684,9 @@ const (
 
 	// ClusterKindAddHostsCluster captures enum value "AddHostsCluster"
 	ClusterKindAddHostsCluster string = "AddHostsCluster"
+
+	// ClusterKindPoolCluster captures enum value "PoolCluster"
+	ClusterKindPoolCluster string = "PoolCluster"
 )
 
 // prop value enum
@@ -791,7 +795,7 @@ var clusterTypeStatusPropEnum []interface{}
 
 func init() {
 	var res []string
-	if err := json.Unmarshal([]byte(`["insufficient","ready","error","preparing-for-installation","pending-for-input","installing","finalizing","installed","adding-hosts","cancelled","installing-pending-user-action"]`), &res); err != nil {
+	if err := json.Unmarshal([]byte(`["insufficient","ready","error","preparing-for-installation","pending-for-input","installing","finalizing","installed","adding-hosts","pool-cluster","cancelled","installing-pending-user-action"]`), &res); err != nil {
 		panic(err)
 	}
 	for _, v := range res {
@@ -827,6 +831,9 @@ const (
 
 	// ClusterStatusAddingHosts captures enum value "adding-hosts"
 	ClusterStatusAddingHosts string = "adding-hosts"
+
+	// ClusterStatusPoolCluster captures enum value "pool-cluster"
+	ClusterStatusPoolCluster string = "pool-cluster"
 
 	// ClusterStatusCancelled captures enum value "cancelled"
 	ClusterStatusCancelled string = "cancelled"
