# models/pool_cluster_create_params.go
@@ -1,0 +1,124 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// PoolClusterCreateParams pool cluster create params
+//
+// swagger:model pool-cluster-create-params
+type PoolClusterCreateParams struct {
+
+	// A proxy URL to use for creating HTTP connections outside the cluster.
+	// http://\<username\>:\<pswd\>@\<ip\>:\<port\>
+	//
+	HTTPProxy *string `json:"http_proxy,omitempty"`
+
+	// A proxy URL to use for creating HTTPS connections outside the cluster.
+	// http://\<username\>:\<pswd\>@\<ip\>:\<port\>
+	//
+	HTTPSProxy *string `json:"https_proxy,omitempty"`
+
+	// Name of the OpenShift cluster.
+	// Required: true
+	// Max Length: 54
+	// Min Length: 1
+	Name *string `json:"name"`
+
+	// An "*" or a comma-separated list of destination domain names, domains, IP addresses, or other network CIDRs to exclude from proxying.
+	NoProxy *string `json:"no_proxy,omitempty"`
+
+	// Version of the OpenShift cluster.
+	// Required: true
+	OpenshiftVersion *string `json:"openshift_version"`
+
+	// The pull secret obtained from Red Hat OpenShift Cluster Manager at cloud.redhat.com/openshift/install/pull-secret.
+	// Required: true
+	PullSecret *string `json:"pull_secret"`
+
+	// Indicate if the networking is managed by the user.
+	UserManagedNetworking *bool `json:"user_managed_networking,omitempty"`
+}
+
+// Validate validates this pool cluster create params
+func (m *PoolClusterCreateParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateOpenshiftVersion(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validatePullSecret(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PoolClusterCreateParams) validateName(formats strfmt.Registry) error {
+
+	if err := validate.Required("name", "body", m.Name); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("name", "body", string(*m.Name), 1); err != nil {
+		return err
+	}
+
+	if err := validate.MaxLength("name", "body", string(*m.Name), 54); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PoolClusterCreateParams) validateOpenshiftVersion(formats strfmt.Registry) error {
+
+	if err := validate.Required("openshift_version", "body", m.OpenshiftVersion); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PoolClusterCreateParams) validatePullSecret(formats strfmt.Registry) error {
+
+	if err := validate.Required("pull_secret", "body", m.PullSecret); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PoolClusterCreateParams) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PoolClusterCreateParams) UnmarshalBinary(b []byte) error {
+	var res PoolClusterCreateParams
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
